Created the header with List Items.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,29 @@
   <!-- BODY -->
 
   <body>
+    <!-- APPLE NAV BAR -->
+    <header>
+      <div>
+        <ul>
+          <li></li>
+          <li>Mac</li>
+          <li>iPod</li>
+          <li>iPhone</li>
+          <li>Watch</li>
+          <li>TV</li>
+          <li>Music</li>
+          <li>Support</li>
+          <li></li>
+          <li></li>
+
+        </ul>
+
+      </div>
+    </header>
+
+
+
+
 
   </body>
 </html>
