Added the search & bag icon in list.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <li>TV</li>
           <li>Music</li>
           <li>Support</li>
-          <li></li>
-          <li></li>
+          <li><img src="stylesheets/css/img/image_large.svg"></li>
+          <li><img src="stylesheets/css/img/image_large_bag.svg"></li>
 
         </ul>
 
