Icon Nav Bar with text.

--- a/index.html
+++ b/index.html
@@ -31,14 +31,94 @@
           <li><svg xmlns="http://www.w3.org/2000/svg" width="14" height="44" viewBox="0 0 14 44"><path d="M12.5 15h-1.81c-.28-1.86-2.04-3-3.69-3s-3.42 1.14-3.69 3H1.5c-.83 0-1.5.67-1.5 1.5v11c0 .83.67 1.5 1.5 1.5h11c.83 0 1.5-.67 1.5-1.5v-11c0-.83-.67-1.5-1.5-1.5zM7 13c1.18 0 2.43.75 2.7 2H4.3c.27-1.25 1.52-2 2.7-2zm6 14.5c0 .28-.22.5-.5.5h-11c-.28 0-.5-.22-.5-.5v-11c0-.28.22-.5.5-.5h11c.28 0 .5.22.5.5v11z" fill="#fff"/></svg></li>
         </ul>
       </div>
+
     </header>
 
-    <!--  APPLE ICON BAR (below the nav bar) -->
-
-    <div id="iconBar">
 
 
+    <!-- ____ APPLE ICON BAR (below the nav bar) ____ -->
+
+  <nav id="chapternav" class="chapternav">
+
+    <div class="nav-wrapper">
+
+      <ul class="nav-items">
+
+
+<!-- INDIVIDUAL LINE ITEMS -->
+
+
+        <li class="nav-item1">
+          <a class="nav-link" href="https://www.apple.com/apple-watch-series-4/">
+            <figure class="nav-icon"></figure>
+            <span class="nav-label">Apple Watch Series 4</span>
+            <span class="nav-new">New</span>
+          </a>
+        </li>
+
+
+        <li class="nav-item2">
+          <a class="nav-link" href="https://www.apple.com/apple-watch-nike/">
+            <figure class="nav-icon"></figure>
+            <span class="nav-label">Apple Watch Nike+</span>
+            <span class="nav-new">New</span>
+          </a>
+        </li>
+
+
+        <li class="nav-item3">
+          <a class="nav-link" href="https://www.apple.com/apple-watch-hermes/">
+            <figure class="nav-icon"></figure>
+            <span class="nav-label">Apple Watch Hermés</span>
+            <span class="nav-new">New</span>
+          </a>
+        </li>
+
+
+        <li class="nav-item4">
+          <a class="nav-link" href="https://www.apple.com/apple-watch-series-3/">
+            <figure class="nav-icon"></figure>
+            <span class="nav-label">Apple Watch Series 3</span>
+          </a>
+        </li>
+
+
+        <li class="nav-item5">
+          <a class="nav-link" href="https://www.apple.com/watchos/watchos-5/">
+            <figure class="nav-icon"></figure>
+            <span class="nav-label">watchOS</span>
+          </a>
+        </li>
+
+
+        <li class="nav-item6">
+          <a class="nav-link" href="https://www.apple.com/shop/watch/bands">
+            <figure class="nav-icon"></figure>
+            <span class="nav-label">Bands</span>
+          </a>
+        </li>
+
+
+        <li class="nav-item7">
+          <a class="nav-link" href="https://www.apple.com/shop/watch/watch-accessories">
+            <figure class="nav-icon"></figure>
+            <span class="nav-label">Accessories</span>
+          </a>
+        </li>
+
+
+        <li class="nav-item8">
+          <a class="nav-link" href="https://www.apple.com/watch/compare/">
+            <figure class="nav-icon"></figure>
+            <span class="nav-label">Compare</span>
+          </a>
+        </li>
+
+
+
+      </ul>
     </div>
+  </nav>
 
   </body>
 </html>
