Top Watch added.

--- a/index.html
+++ b/index.html
@@ -114,11 +114,17 @@
           </a>
         </li>
 
-
-
       </ul>
     </div>
   </nav>
+
+<!--  THIS IS THE FIRST PHOTO (TOP WATCH) -->
+
+  <div class="top-watch">
+      <a class="top-watch-link"  href="https://www.apple.com/apple-watch-series-4/"><img src="https://www.apple.com/v/watch/home/j/images/hero_large_2x.jpg" alt="watch" width="526px" height="948px"></a>
+  </div>
+
+
 
   </body>
 </html>
