Series 4 Logo in final position

--- a/index.html
+++ b/index.html
@@ -126,5 +126,23 @@
 
 
 
+
+
+<!-- WATCHER SERIES 4 - LOGO -->
+
+<div class="series4-wrapper">
+  <div class="series4-logo"></div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
   </body>
 </html>
