Photos added to page.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 
   </head>
 
-  <!-- BODY -->
+
+
+  <!--  ___________ BODY ___________  -->
+
+
 
   <body>
-    <!-- APPLE NAV BAR -->
+    <!--  ******     APPLE NAV BAR   ******     -->
     <header>
       <div>
         <ul>
@@ -39,9 +43,7 @@
     <!-- ____ APPLE ICON BAR (below the nav bar) ____ -->
 
   <nav id="chapternav" class="chapternav">
-
     <div class="nav-wrapper">
-
       <ul class="nav-items">
 
 
@@ -132,12 +134,98 @@
 
 <div class="series4-wrapper">
   <div class="series4-logo"></div>
+    <div class="series4-avail">Availabile 9.21</div>
+      <div class="seriesLinks">
+        <a href="https://www.apple.com/shop/buy-watch/apple-watch" class="series4-links">Order ﹥</a>
+        <a href="https://www.apple.com/apple-watch-series-4/" class="series4-links">Learn More ﹥</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+<!-- ********  THIS IS THE BEGINNING OF THE 4 BOX PHOTOS   ****** -->
+
+
+
+<div class="tiles-wrapper">
+
+
+  <ul class="tiles-ul">
+
+
+    <li class="tile-health">
+			<div class="tile-bg"></div>
+			<a href="linkHERE" class="tile-link"></a>
+			<div class="tile-dark"></div>
+      <div class="tile-copy">
+        <h2 class="tile-headline">Proactive<br>Health<br>Monitor</h2>
+        <a href="linkHERE" class="tile-text-link">
+          <span class="icon-copy">Learn more</span>
+          <span class="icon icon-after more"></span>
+        </a>
+      </div>
+    </li>
+
+
+    <li class="tile-workout">
+			<div class="tile-bg"></div>
+			<a href="linkHERE" class="tile-link"></a>
+			<div class="tile-dark"></div>
+      <div class="tile-copy">
+        <h2 class="tile-headline">Ultimate<br>Workout<br>Partner</h2>
+        <a href="linkHERE" class="tile-text-link">
+          <span class="icon-copy">Learn more</span>
+          <span class="icon icon-after more"></span>
+        </a>
+      </div>
+    </li>
+
+
+    <li class="tile-activity">
+			<div class="tile-bg"></div>
+			<a href="linkHERE" class="tile-link"></a>
+			<div class="tile-dark"></div>
+      <div class="tile-copy">
+        <h2 class="tile-headline">Comprehensive<br>Activity Traker</h2>
+        <a href="linkHERE" class="tile-text-link">
+          <span class="icon-copy">Learn more</span>
+          <span class="icon icon-after more"></span>
+        </a>
+      </div>
+    </li>
+
+
+    <li class="tile-connect">
+			<div class="tile-bg"></div>
+			<a href="linkHERE" class="tile-link"></a>
+			<div class="tile-dark"></div>
+      <div class="tile-copy">
+        <h2 class="tile-headline">Easy Ways<br>to Connect</h2>
+        <a href="linkHERE" class="tile-text-link">
+          <span class="icon-copy">Learn more</span>
+          <span class="icon icon-after more"></span>
+        </a>
+      </div>
+    </li>
+
+
+
+  </ul>
+
+
+
+
+
 </div>
 
 
 
 
 
+<!-- ********  THIS IS THE END OF THE 4 BOX PHOTOS   ****** -->
 
 
 
