Modified text on photos.

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 			<div class="tile-dark"></div>
       <div class="tile-copy">
         <h2 class="tile-headline">Proactive<br>Health<br>Monitor</h2>
-        <a href="linkHERE" class="tile-text-link">
-          <span class="icon-copy">Learn more</span>
+        <a href="https://www.apple.com/apple-watch-series-4/health/" class="tile-text-link">
+          <span class="icon-copy">Learn more ﹥</span>
           <span class="icon icon-after more"></span>
         </a>
       </div>
@@ -176,8 +176,8 @@
 			<div class="tile-dark"></div>
       <div class="tile-copy">
         <h2 class="tile-headline">Ultimate<br>Workout<br>Partner</h2>
-        <a href="linkHERE" class="tile-text-link">
-          <span class="icon-copy">Learn more</span>
+        <a href="https://www.apple.com/apple-watch-series-4/workout/" class="tile-text-link">
+          <span class="icon-copy">Learn more ﹥</span>
           <span class="icon icon-after more"></span>
         </a>
       </div>
@@ -186,12 +186,12 @@
 
     <li class="tile-activity">
 			<div class="tile-bg"></div>
-			<a href="linkHERE" class="tile-link"></a>
+			<a href="https://www.apple.com/apple-watch-series-4/activity/" class="tile-link"></a>
 			<div class="tile-dark"></div>
       <div class="tile-copy">
         <h2 class="tile-headline">Comprehensive<br>Activity Traker</h2>
         <a href="linkHERE" class="tile-text-link">
-          <span class="icon-copy">Learn more</span>
+          <span class="icon-copy">Learn more ﹥</span>
           <span class="icon icon-after more"></span>
         </a>
       </div>
@@ -204,8 +204,8 @@
 			<div class="tile-dark"></div>
       <div class="tile-copy">
         <h2 class="tile-headline">Easy Ways<br>to Connect</h2>
-        <a href="linkHERE" class="tile-text-link">
-          <span class="icon-copy">Learn more</span>
+        <a href="https://www.apple.com/apple-watch-series-4/connect/" class="tile-text-link">
+          <span class="icon-copy">Learn more ﹥</span>
           <span class="icon icon-after more"></span>
         </a>
       </div>
